AboutMe, Hobbies, Contact, and Home pages

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>William Scott Portfolio</title>
+    <title>William Scott Portfolio - Contact Me</title>
     <link rel="stylesheet" href="main.css" />
 </head>
 
@@ -36,6 +36,8 @@
 
             <!-- Main           -->
             <main>
+                <p>Email <a href="mailto:ww.scott@pack.csupueblo.edu">&#9993; ww.scott@pack.csupueblo.edu</a></p>
+                <p>Phone <a href="tel:800-762-4912">1-800-762-4912</a></p>
             </main>
             <!-- End Main       -->
         </div>
