--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 
             <!-- Main           -->
             <main>
+                <img src="imgs/me.png" alt="One of my senior pictures" class="pics" />
+                <p>My name is William Scott, I am a student at CSU Pueblo. To find out more about me and my hobbies, go
+                    to <a href="abtme.html">About Me!</a></p>
             </main>
             <!-- End Main       -->
         </div>
