--- a/abtme.html
+++ b/abtme.html
@@ -10,7 +10,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>William Scott Portfolio</title>
+    <title>William Scott Portfolio - About Me</title>
     <link rel="stylesheet" href="main.css" />
 </head>
 
@@ -36,6 +36,20 @@
 
             <!-- Main           -->
             <main>
+                <h2 class="center">My Work</h2>
+                <p> I work at a place called <a href="https://www.codeninjas.com" target="_blank"> Code Ninjas</a>, as a
+                    lead instructure there. We teach kids 7-14 how to make video games, using Blocks, Javascript, and
+                    C#. We use Microsoft Makecode and Unity.</p>
+
+                <p>At home, I also work at my family buisness called <a href="https://www.tier3consulting.com"
+                        target="_blank"> Tier3 Hosting and Consulting </a>. It is a web development company, and out
+                    goal is to provide small buisness web solutions.</p>
+                <br>
+                <h2 class="center">My School</h2>
+                <p>I graduated from STEM School Highlands Ranch in May 2019. After STEM I earned my assosiates in
+                    cybersecurity from Arapahoe Comunity College. I am Currently working on my bachelors at Colorado
+                    State University Pueblo!</p>
+
             </main>
             <!-- End Main       -->
         </div>
