--- a/cats.html
+++ b/cats.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!--
     Name: William Scott
     File: Index.Html
@@ -10,9 +10,8 @@
 
 <head>
     <meta charset="utf-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>William Scott Portfolio - My Hobbies</title>
+    <title>William Scott Portfolio</title>
     <link rel="stylesheet" href="main.css" />
 </head>
 
@@ -23,7 +22,8 @@
             <header>
                 <div id="header">
                     <a href="index.html" class="noMobile"><img alt="some icon here" src="imgs/Turtle.PNG" id="logo" /></a>
-                    
+                    <!-- I was going to put a figcaption here, but it looked bad, so instead it is on the Home Page-->
+
                     <nav>
                         <h1 id="top" class="mobileOnly">William Scott</h1>
                         <ul>
@@ -41,32 +41,20 @@
 
             <!-- Main           -->
             <main>
-                <h2 class="center">Table Top Games</h2>
-                <p>I play many board games with friends and family. I don't just play cassics like Monopoly, but also
-                    games like:</p>
-                <ul>
-                    <li>Pinochle</li>
-                    <li>Magic The Gathering</li> <!-- Unordered list here lol-->
-                    <li>Eldritch Horror</li>
-                    <li>Pandimic</li>
-                    <li>Dungeons and Dragons</li>
-                    <li>And lots more!</li>
-                </ul>
-                <br>
-                <h2 class="center">Video Games</h2>
-                <p>I play many video games, and like many people I have recently been playing through Legend of Zelda
-                    Tears of the Kingdom. But my current top 3 games are:</p>
-                <ol>
-                    <li>Hallowknight</li>
-                    <li>Binding of Isaac</li>
-                    <li>Factorio</li>
-                </ol>
-                <br>
-                <h2 class="center">Others</h2>
-                <p>I have many other seasonal hobbies like Hunting, Fishing, Golf, and Sking.</p>
-                <p>I run a Chess club for the students at my work, and play in tournoments with my coworkers!</p>
-                <p>I have been practicing solving Rubik's cubes for years, and my fastest time is a little under 20
-                    seconds!</p>
+                <div class="grid-container">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
             </main>
             <!-- End Main       -->
         </div>
