--- a/abtme.html
+++ b/abtme.html
@@ -10,6 +10,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>William Scott Portfolio - About Me</title>
     <link rel="stylesheet" href="main.css" />
 </head>
@@ -20,16 +21,19 @@
             <!-- Header         -->
             <header>
                 <div id="header">
-                    <a href="index.html"><img alt="some icon here" src="imgs/Turtle.PNG" id="logo" /></a>
+                    <a href="index.html" class="noMobile"><img alt="some icon here" src="imgs/Turtle.PNG" id="logo" /></a>
+                    
                     <nav>
+                        <h1 id="top" class="mobileOnly">William Scott</h1>
                         <ul>
                             <li><a href="index.html">&clubs;HOME&clubs;</a></li>
                             <li><a href="abtme.html">&hearts;ABOUT ME&hearts;</a></li>
                             <li><a href="hobbies.html">&spades;HOBBIES&spades;</a></li>
                             <li><a href="contact.html">&diams;CONTACT&diams;</a></li>
                         </ul>
+                        <h1 id="top" class="noMobile">William Scott</h1>
                     </nav>
-                    <h1 id="top">William Scott</h1>
+                    
                 </div>
             </header>
             <!-- End Nav        -->
