--- a/abtme.html
+++ b/abtme.html
@@ -53,7 +53,30 @@
                 <p>I graduated from STEM School Highlands Ranch in May 2019. After STEM I earned my assosiates in
                     cybersecurity from Arapahoe Comunity College. I am Currently working on my bachelors at Colorado
                     State University Pueblo!</p>
+                    <br>
 
+                    <table> <!-- table for HW4-->
+                        <tr>
+                            <th>OS Prefrences</th>
+                            <th>Work Experiance</th>
+                            <th>Coding Languages</th>
+                        </tr>
+                        <tr>
+                            <td>Linux, Manjaro or Ubuntu Prefered</td>
+                            <td>Code Ninjas</td>
+                            <td>Javascript</td>
+                        </tr>
+                        <tr>
+                            <td>MacOS, cause at least the ecosystem is good</td>
+                            <td>Tier3</td>
+                            <td>C#</td>
+                        </tr>
+                        <tr>
+                            <td>Windows, basically bloatware</td>
+                            <td>HCA Healthcard Skyridge</td>
+                            <td>Python</td>
+                        </tr>
+                    </table>
             </main>
             <!-- End Main       -->
         </div>
