--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,24 @@
             <main>
                 <p class="contact"><a href="mailto:ww.scott@pack.csupueblo.edu">Email <br> ww.scott@pack.csupueblo.edu</a></p>
                 <p class="contact"><a href="tel:800-762-4912">Phone <br> 1-800-762-4912</a></p>
+
+
+                <form>
+                    <label for="fName">First Name:</label>
+                    <br>
+                    <input type="text" id="fName">
+                    <br>
+                    <label for="lName">Last Name:</label>
+                    <br>
+                    <input type="text" id="lName">
+                    <br>
+                    <label for="textIn">Ask a question here!</label>
+                    <br>
+                    <textarea name="textIn" id="textIn" cols="30" rows="10">You can type here!</textarea>
+                    <br>
+                    <input type="submit" name="submit" id="submit" value="submit" onclick="alert('Submitted!'); alert('Actually that did nothing!')">
+                    
+                </form>
             </main>
             <!-- End Main       -->
         </div>
