--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
             <!-- Main           -->
             <main>
+
                 <aside class="noMobile">
                     <p>My name is William Scott, I am a student at CSU Pueblo. To find out more about me and my hobbies, go
                         to <a href="abtme.html">About Me!</a></p>
@@ -53,6 +54,22 @@
                         to <a href="abtme.html">About Me!</a></p>
                 </aside>
                 
+                <br>
+
+                <p>Here is some royalty free music to enjoy while looking around!</p>
+                <audio controls>
+                    <source src="Media/game-setting-fantasy-141319.mp3" type="audio/mp3">
+                    
+                  Your browser does not support the audio element.
+                </audio>
+                <audio controls>
+                    <source src="Media/sleep-141321.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+                <audio controls>
+                    <source src="Media/chill-chillout-romantic-141318.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
             </main>
             <!-- End Main       -->
         </div>
