--- a/abtme.html
+++ b/abtme.html
@@ -82,7 +82,7 @@
         </div>
         <!-- Footer         -->
         <footer>
-            <p><a href="mailto:ww.scott@pack.csupueblo.edu">&#9993; ww.scott@pack.csupueblo.edu</a></p>
+            <p><a href="mailto:ww.scott@pack.csupueblo.edu">ww.scott@pack.csupueblo.edu</a></p>
         </footer>
         <!-- End Footer     -->
     </div>
