--- a/template.html
+++ b/template.html
@@ -26,7 +26,8 @@
 
                     <nav>
                         <h1 id="top" class="mobileOnly">William Scott</h1>
-                        <ul>
+                        <button onclick="" class=""mobileOnly><img src="imgs/Hamburger_icon.png"></button>
+                        <ul id="menu">
                             <li><a href="index.html">&clubs;HOME&clubs;</a></li>
                             <li><a href="abtme.html">&hearts;ABOUT ME&hearts;</a></li>
                             <li><a href="hobbies.html">&spades;HOBBIES&spades;</a></li>
@@ -46,7 +47,7 @@
         </div>
         <!-- Footer         -->
         <footer>
-            <p><a href="mailto:ww.scott@pack.csupueblo.edu">&#9993; ww.scott@pack.csupueblo.edu</a></p>
+            <p><a href="mailto:ww.scott@pack.csupueblo.edu">ww.scott@pack.csupueblo.edu</a></p>
         </footer>
         <!-- End Footer     -->
     </div>
