--- a/template.html
+++ b/template.html
@@ -48,6 +48,7 @@
         <!-- Footer         -->
         <footer>
             <p><a href="mailto:ww.scott@pack.csupueblo.edu">ww.scott@pack.csupueblo.edu</a></p>
+            <a href="https://www.linkedin.com/in/walter-w-scott/"><img src="imgs/Lin.png"></a>
         </footer>
         <!-- End Footer     -->
     </div>
