--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         </div>
         <!-- Footer         -->
         <footer>
-            <p><a href="mailto:ww.scott@pack.csupueblo.edu">ww.scott@pack.csupueblo.edu</a></p>
+            <a href="mailto:ww.scott@pack.csupueblo.edu" class="socials">ww.scott@pack.csupueblo.edu</a>
+            <a href="https://www.linkedin.com/in/walter-w-scott/"><img class="socials" src="imgs/Lin.png"></a>
         </footer>
         <!-- End Footer     -->
     </div>
