--- a/template.html
+++ b/template.html
@@ -26,7 +26,8 @@
 
                     <nav>
                         <h1 id="top" class="mobileOnly">William Scott</h1>
-                        <button onclick="" class=""mobileOnly><img src="imgs/Hamburger_icon.png"></button>
+
+                        <button onclick="hamburger()" class="mobileOnly"><img id="hamburger" src="imgs/Hamburger_icon.png"></button>
                         <ul id="menu">
                             <li><a href="index.html">&clubs;HOME&clubs;</a></li>
                             <li><a href="abtme.html">&hearts;ABOUT ME&hearts;</a></li>
@@ -47,8 +48,8 @@
         </div>
         <!-- Footer         -->
         <footer>
-            <p><a href="mailto:ww.scott@pack.csupueblo.edu">ww.scott@pack.csupueblo.edu</a></p>
-            <a href="https://www.linkedin.com/in/walter-w-scott/"><img src="imgs/Lin.png"></a>
+            <a href="mailto:ww.scott@pack.csupueblo.edu" class="socials">ww.scott@pack.csupueblo.edu</a>
+            <a href="https://www.linkedin.com/in/walter-w-scott/"><img class="socials" src="imgs/Lin.png"></a>
         </footer>
         <!-- End Footer     -->
     </div>
