--- a/cats.html
+++ b/cats.html
@@ -11,7 +11,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>William Scott Portfolio</title>
+    <title>William Scott Portfolio - Cats</title>
     <link rel="stylesheet" href="main.css" />
 </head>
 
