--- a/cats.html
+++ b/cats.html
@@ -11,6 +11,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Non-existant cats page">
     <title>William Scott Portfolio - Cats</title>
     <link rel="stylesheet" href="main.css" />
 </head>
