--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,8 @@
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="My Portfolio contact me page!">
     <title>William Scott Portfolio - Contact Me</title>
     <link rel="stylesheet" href="main.css" />
 </head>
