--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My Portfolio home page!">
     <title>William Scott Portfolio</title>
     <link rel="stylesheet" href="main.css" />
     <script src="script.js"></script>
